Tests 1 & 2 on posting

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -22,6 +22,10 @@
 			background-color: #ffd000;
 			margin: 0 0 20px 0;
 			}
+
+			body {
+				font-family: Verdana, Geneva, Tahoma, sans-serif;
+			}
 		</style>	
 	</head>
 	<body>
